// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalSEOUpsell matches the snapshot 1`] = `
<div
  className="RsqJy"
>
  <test-file-stub
    className="dwuPRF"
  />
  <div
    className="bQjOVY"
  >
    <h3
      className="fVHkKN"
    >
      Serving local customers?
    </h3>
    <p
      className="fcGUfw"
    >
      Truly optimize your site for a local audience with our Local SEO plugin! Optimized address details, opening hours, store locator and pickup option!
    </p>
    <a
      className="OTvqj"
      href="https://example.com"
      rel="noopener"
      target="_blank"
    >
      Get the Local SEO plugin now
      <span
        className="A11yNotice-u1v0gg-0 dWDZbM"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
</div>
`;

exports[`LocalSEOUpsell matches the snapshot in right to left mode 1`] = `
<div
  className="gvyBzf"
>
  <test-file-stub
    className="bjTQin"
  />
  <div
    className="bQjOVY"
  >
    <h3
      className="fVHkKN"
    >
      Serving local customers?
    </h3>
    <p
      className="fcGUfw"
    >
      Truly optimize your site for a local audience with our Local SEO plugin! Optimized address details, opening hours, store locator and pickup option!
    </p>
    <a
      className="OTvqj"
      href="https://example.com"
      rel="noopener"
      target="_blank"
    >
      Get the Local SEO plugin now
      <span
        className="A11yNotice-u1v0gg-0 dWDZbM"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>
</div>
`;
